--- a/package.json
+++ b/package.json
@@ -25,38 +25,40 @@
   "author": "Janishar Ali",
   "license": "Apache-2.0",
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "axios": "^1.6.5",
-    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dockerode": "^4.0.8",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "mongoose": "^8.0.3",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "newrelic": "^11.8.0",
+    "node-cron": "^4.2.1",
     "qs": "^6.11.2",
     "redis": "^4.6.12",
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
-    "@types/morgan": "^1.9.9",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.11",
     "@types/newrelic": "^9.14.3",
     "@types/newrelic__winston-enricher": "^0.1.5",
     "@types/node": "^20.10.6",
     "@types/request": "^2.48.12",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "colors": "^1.4.0",
