--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "author": "Janishar Ali",
   "license": "Apache-2.0",
   "dependencies": {
-    "@octokit/rest": "^22.0.0",
+    "@octokit/rest": "^20.0.2",
     "axios": "^1.6.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dockerode": "^4.0.8",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -41,7 +42,7 @@
     "qs": "^6.11.2",
     "redis": "^4.6.12",
     "socket.io": "^4.8.1",
-    "uuid": "^13.0.0",
+    "uuid": "^8.3.2",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
@@ -58,7 +59,7 @@
     "@types/node": "^20.10.6",
     "@types/request": "^2.48.12",
     "@types/supertest": "^6.0.2",
-    "@types/uuid": "^11.0.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "colors": "^1.4.0",
