--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "npx concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "watch-node": "nodemon -r dotenv/config build/server.js",
     "clean": "rimraf ./build",
-    "build-ts": "tsc",
+    "build-ts": "node --max-old-space-size=4096 ./node_modules/.bin/tsc",
     "watch-ts": "tsc -w",
     "check": "tsc --noEmit",
     "eslint": "eslint . --ext .js,.ts",
